[package]
name = "kingcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
chrono = "0.4.23"
array-bytes = "6.0.0"
libp2p = {version = "0.50.0", features = ["mdns", "floodsub"] }
tokio = {version = "1.23.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.4"
